Bad checkValidity result on recently "enabled" form fields https://bugs.webkit.org/show_bug.cgi?id=85704

Reviewed by Kent Tamura.

Source/WebCore:

Test: fast/forms/disabled-attr-checkvalidity.html

We were tripping on the assertion m_isValid == validity()->valid()
inside HTMLFormControlElement::isValidFormControlElement.
m_isValid was becoming stale because setNeedsValidityCheck wasn't called
after m_willValidate changed.

* html/HTMLFormControlElement.cpp:
(WebCore::HTMLFormControlElement::willValidate): We used const_cast
because it was too difficult to remove const. We are checking if the
value from willValidate has changed to avoid an infinite loop.
(WebCore::HTMLFormControlElement::setNeedsWillValidateCheck):

LayoutTests:

* fast/forms/disabled-attr-checkvalidity-expected.txt: Added.
* fast/forms/disabled-attr-checkvalidity.html: Added.


Canonical link: https://commits.webkit.org/105254@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@118501 268f45cc-cd09-0410-ab3c-d52691b4dbfc